--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 
 <head>
   <meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=Edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title></title>
+  <title>My Portfolio</title>
 
   <link rel="stylesheet" href="style.css">
 
